Inline a few methods in ExplainProfilePlan
All single use and the split didn't help with readability